Update student removal method call
The code has been updated to use the getFirst() method instead of get(0) for removing a student from the berthaVonSuttner object. This change was made to improve code readability and ensure use of the most appropriate LinkedList method.