@@ -28,7 +28,7 @@ public class Main {
         System.out.println(berthaVonSuttner.findByID("34769823562"));
 
         berthaVonSuttner.removeStudent(berthaVonSuttner.findByID("34769823562"));
-        berthaVonSuttner.removeStudent(students.get(0));
+        berthaVonSuttner.removeStudent(students.getFirst());
         berthaVonSuttner.printStudents();
 
     }
